<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/milk"
    android:fitsSystemWindows="true"
    android:padding="40dp"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tranquilo"
        android:textSize="40sp"
        android:textColor="@color/darkGreen"
        android:textStyle="bold"/>
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/cards"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">
        <LinearLayout
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/header1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/relax_your_mind"
                android:textSize="25sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/flower"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/take_a_deep_breath_and_start_guided_breathing_exercises_to_reduce_stress_and_calm_your_thoughts"
                android:padding="16dp"
                android:textSize="25sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/header2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/track_your_mood"
                android:padding="16dp"
                android:textSize="25sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/smile"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/log_how_you_feel_every_day_and_discover_patterns_that_affect_your_mental_well_being"
                android:padding="16dp"
                android:textSize="25sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/header3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/find_your_calm_space"
                android:padding="16dp"
                android:textSize="25sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/place"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/explore_relaxing_sounds_journaling_and_mindfulness_tools_designed_just_for_you"
                android:padding="16dp"
                android:textSize="25sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </ViewFlipper>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/get_started"
        android:textSize="25sp"
        android:backgroundTint="@color/darkGreen"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>